--- a/src/main/resources/templates/oneUserInfo.html
+++ b/src/main/resources/templates/oneUserInfo.html
@@ -6,20 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
           integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <title>us</title>
-</head>
 
+    <title>All users</title>
+
+
+</head>
 <body>
 
+<!--Шапка-->
 <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-        <div class="text-white">
-            <h5>
-                <span th:text="${user.getEmail()} "></span>
-                <span> with roles: </span>
-                <span th:each="roles:${user.getRoles()}"
-                      th:text="${roles.getName().replace('ROLE_','')}+'  '"></span>
-            </h5>
+        <div class="text-white" id="infoUser">
+
         </div>
 
         <form th:action="@{/logout}" method="post">
@@ -32,55 +30,45 @@
     <div class="row">
         <div class="col-2 p-0">
 
-
+            <!--            Боковая панель-->
             <div class="nav flex-column nav-pills pt-4" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                <a class=" nav-item nav-link" th:href="@{/admin}" aria-controls="v-pills-home" aria-selected="false"
+                <a class=" nav-item nav-link" href="/admin" aria-controls="v-pills-home" aria-selected="false"
                    sec:authorize="hasRole('ADMIN')">Admin</a>
-                <a class=" nav-link active" aria-selected="true" sec:authorize="(hasAnyRole('ADMIN', 'USER'))">User</a>
+                <a class=" nav-link active" aria-selected="true" href="#user" sec:authorize="(hasAnyRole('ADMIN', 'USER'))">User</a>
             </div>
         </div>
         <div class="col-10 px-2 pt-4">
-            <div class="container-fluid">
+            <div role="tabpanel" class="tab-pane active in" id="user">
+                <div class="container-fluid">
 
-                <h2>User information-page <span class="badge badge-secondary"></span></h2>
-                <div class="tab-content" id="nav-tabContent">
-                    <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
-                         aria-labelledby="nav-home-tab">
+                    <h2>User information-page <span class="badge badge-secondary"></span></h2>
+                    <div class="tab-content" id="nav-tabContent">
+                        <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
+                             aria-labelledby="nav-home-tab">
 
 
-                        <div class="card">
-                            <div class="card-header">
-                                <div class="m-1">
-                                    <h5>About user</h5>
+                            <div class="card">
+                                <div class="card-header">
+                                    <div class="m-1">
+                                        <h5>About user</h5>
+                                    </div>
                                 </div>
                             </div>
+                            <table class="table table-striped table-bordered">
+                                <thead>
+                                <tr>
+                                    <th scope="col">ID</th>
+                                    <th scope="col">First Name</th>
+                                    <th scope="col">Last Name</th>
+                                    <th scope="col">Age</th>
+                                    <th scope="col">Email</th>
+                                    <th scope="col">Role</th>
+
+                                </tr>
+                                </thead>
+                                <tbody id="user-info-table"></tbody>
+                            </table>
                         </div>
-                        <table class="table table-striped table-bordered">
-                            <thead>
-                            <tr>
-                                <th scope="col">ID</th>
-                                <th scope="col">First Name</th>
-                                <th scope="col">Last Name</th>
-                                <th scope="col">Age</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">Role</th>
-
-                            </tr>
-                            </thead>
-                            <tbody>
-
-                            <tr th:each="us: ${user}">
-                                <td th:text="${us.getId()}">user</td>
-                                <td th:text="${us.getFirstname()}">user</td>
-                                <td th:text="${us.getLastname()}">user</td>
-                                <td th:text="${us.getAge()}">user</td>
-                                <td th:text="${us.getEmail()}">user</td>
-                                <td>
-                                    <ul th:each="role: ${us.getRoles()}" th:text="${role.getName()}">role</ul>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
                     </div>
                 </div>
             </div>
@@ -88,6 +76,17 @@
     </div>
 </div>
 
-</body>
-</html>
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+</body>
+<script src="../static/userScript.js"></script>
+</html>
