--- a/src/main/resources/templates/oneUserInfo.html
+++ b/src/main/resources/templates/oneUserInfo.html
@@ -34,7 +34,8 @@
             <div class="nav flex-column nav-pills pt-4" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <a class=" nav-item nav-link" href="/admin" aria-controls="v-pills-home" aria-selected="false"
                    sec:authorize="hasRole('ADMIN')">Admin</a>
-                <a class=" nav-link active" aria-selected="true" href="#user" sec:authorize="(hasAnyRole('ADMIN', 'USER'))">User</a>
+                <a class=" nav-link active" aria-selected="true" href="#user"
+                   sec:authorize="(hasAnyRole('ADMIN', 'USER'))">User</a>
             </div>
         </div>
         <div class="col-10 px-2 pt-4">
